<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/welcome_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginBottom="340dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:id="@+id/cache_sb"
        app:layout_constraintTop_toBottomOf="@+id/cache_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:progress="20"
        android:max="50"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/cache_tv"
        android:text="@string/cache"
        app:layout_constraintTop_toBottomOf="@+id/welcome_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/embedded_tv"
        android:text="@string/embedded_options_available"
        app:layout_constraintTop_toBottomOf="@+id/cache_sb"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/embedded_sp"
        app:layout_constraintTop_toBottomOf="@+id/embedded_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:entries="@array/yes_no_arr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tbt_tv"
        android:text="@string/intel_turbo_boost_technology"
        app:layout_constraintTop_toBottomOf="@+id/embedded_sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/tbt_sp"
        app:layout_constraintTop_toBottomOf="@+id/tbt_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:entries="@array/tbt_arr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/ivt_tv"
        android:text="@string/intel_virtualization_technology"
        app:layout_constraintTop_toBottomOf="@+id/tbt_sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/ivt_sp"
        app:layout_constraintTop_toBottomOf="@+id/ivt_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:entries="@array/yes_no_arr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <SeekBar
        android:id="@+id/tdp_sb"
        app:layout_constraintTop_toBottomOf="@+id/tdp_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:progress="20"
        android:max="100"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tdp_tv"
        android:text="@string/tdp_20w"
        app:layout_constraintTop_toBottomOf="@+id/ivt_sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:id="@+id/t_sb"
        app:layout_constraintTop_toBottomOf="@+id/t_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:progress="20"
        android:max="100"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/t_tv"
        android:text="@string/t_100_c"
        app:layout_constraintTop_toBottomOf="@+id/tdp_sb"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/freq_et"
        android:hint="@string/processor_base_frequency_hz_mhz"
        app:layout_constraintTop_toBottomOf="@+id/t_sb"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="100dp"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:id="@+id/num_of_cores_sb"
        app:layout_constraintTop_toBottomOf="@+id/num_of_cores_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:progress="16"
        android:max="70"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/num_of_cores_tv"
        android:text="@string/nb_of_cores"
        app:layout_constraintTop_toBottomOf="@+id/freq_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:id="@+id/lithography_sb"
        app:layout_constraintTop_toBottomOf="@+id/lithography_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:progress="20"
        android:max="80"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/lithography_tv"
        android:text="@string/lithography_nm"
        app:layout_constraintTop_toBottomOf="@+id/num_of_cores_sb"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/launch_date_et"
        android:hint="@string/launch_date"
        app:layout_constraintTop_toBottomOf="@+id/lithography_sb"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/status_tv"
        android:text="@string/status"
        app:layout_constraintTop_toBottomOf="@+id/launch_date_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/status_sp"
        app:layout_constraintTop_toBottomOf="@+id/status_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:entries="@array/status_arr"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/segment_tv"
        android:text="@string/segment"
        app:layout_constraintTop_toBottomOf="@+id/status_sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/segment_sp"
        app:layout_constraintTop_toBottomOf="@+id/segment_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:entries="@array/vertical_seg_arr"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/predict_tv"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:text="Computing..."
        app:layout_constraintTop_toBottomOf="@+id/segment_sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/control_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/predict_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/send_to_server_btn"
            android:textAlignment="center"
            android:text="@string/send_to_server"
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>
        <ImageButton
            android:id="@+id/try_again_btn"
            android:textAlignment="center"
            android:src="@drawable/ic_settings_backup_restore_24px"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:contentDescription="@string/try_again" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
